# confla-android

./: .gitignore  AboutPage.qml  BackgroundItem.qml  CMakeLists.txt  ConferenceDetailPage.qml  ConferenceListPage.qml  Data.qml  EventDetailPage.qml  MainPage.qml  MapPage.qml  Maps.qrc  Page.qml  PageHeader.qml  PhotoDetailPage.qml  PinchMap.qml  PlaceDetailPage.qml  README.md  RssItemDelegate.qml  ScheduleDelegate.qml  ScheduleGridDelegate.qml  SchedulePage.qml  SectionHeader.qml  Theme.js  android-confla-cs_CZ.qm  android-confla-cs_CZ.ts  android-confla-en_US.qm  android-confla-en_US.ts  android-confla.pro  android-devconf-cs_CZ.qm  android-devconf-cs_CZ.ts  android-devconf-en_US.qm  android-devconf-en_US.ts  android-devconf.pro  confla.qrc  customnetworkaccessmanager.cpp  data.json  filereader.cpp  functions.js  main.cpp  main.qml  (+6 more)
Maps/OSM/: create_Maps_qrc.sh  deg2num.py  download_list.sh
android/: AndroidManifest.xml
qml/: Button.qml  ConferenceDetailPage.qml  ConferenceListPage.qml  Data.qml  DialogButton.qml  EventDetailPage.qml  LineButton.qml  Page.qml  PlaceDetailPage.qml  ScheduleDelegate.qml  ScheduleGridDelegate.qml  SchedulePage.qml  functions.js
src/: downloader.cpp  downloader.h  filereader.h  main.cpp
translations/: harbour-confla-cs_CZ.ts  harbour-confla-en_US.ts
